# luminal

./: Cargo.toml  README.md
crates/luminal_2/: Cargo.toml
crates/luminal_2/src/: code.lisp  codegen.rs  debug.rs  extract.rs  lib.rs  run.rs  translate.rs  utils.rs
crates/luminal_opencl/: Cargo.toml
crates/luminal_opencl/src/: lib.rs  prim.rs
demos/flash_attention/: Cargo.toml  README.md
demos/flash_attention/src/: main.rs
demos/matmul/: .gitignore  Cargo.toml  egglog.txt  kernel_log.txt
demos/matmul/src/: main.rs
examples/llama/src/: main.rs
examples/phi/src/: main.rs
examples/qwen/src/: main.rs
examples/simple/src/: main.rs
src/: graph.rs
src/shape/: symbolic.rs  tracker.rs
src/tests/: test_prim.rs
