[package]
name = "run_egglog"
version = "0.1.0"
edition = "2024"

[features]
graphvis = [ "dep:petgraph", "dep:regex", "dep:urlencoding", "dep:webbrowser" ]

[dependencies]
colored = "3.0.0"
egglog = { git = "https://github.com/egraphs-good/egglog" }
petgraph = { version = "0.8.1", optional = true }
regex = { version = "1.11.1", optional = true }
serde_json = "1.0.140"
urlencoding = { version = "2.1.3", optional = true }
webbrowser = { version = "1.0.4", optional = true }
